--- a/src/main/java/vn/edu/nuce/daotao/StoreManager/view/jpanel/ReportJpanel.form
+++ b/src/main/java/vn/edu/nuce/daotao/StoreManager/view/jpanel/ReportJpanel.form
@@ -877,9 +877,9 @@
                                   </Group>
                                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="txtFromDateReceipt1" alignment="0" pref="215" max="32767" attributes="0"/>
-                                      <Component id="txtEndDateReceipt1" alignment="1" max="32767" attributes="0"/>
-                                      <Component id="jComboBox1" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtFromDateProduct" alignment="0" pref="215" max="32767" attributes="0"/>
+                                      <Component id="txtEndDateProduct" alignment="1" max="32767" attributes="0"/>
+                                      <Component id="cbbType" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -890,17 +890,17 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="jLabel33" max="32767" attributes="0"/>
-                                      <Component id="jComboBox1" pref="31" max="32767" attributes="0"/>
+                                      <Component id="cbbType" pref="31" max="32767" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="jLabel32" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="txtFromDateReceipt1" alignment="0" min="-2" pref="31" max="-2" attributes="0"/>
+                                      <Component id="txtFromDateProduct" alignment="0" min="-2" pref="31" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="jLabel34" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="txtEndDateReceipt1" alignment="0" min="-2" pref="31" max="-2" attributes="0"/>
+                                      <Component id="txtEndDateProduct" alignment="0" min="-2" pref="31" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace pref="67" max="32767" attributes="0"/>
                               </Group>
@@ -924,7 +924,7 @@
                             <Property name="text" type="java.lang.String" value="Th&#x1ec3; lo&#x1ea1;i"/>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JFormattedTextField" name="txtFromDateReceipt1">
+                        <Component class="javax.swing.JFormattedTextField" name="txtFromDateProduct">
                           <Properties>
                             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                               <Format format="yyyy-MM-dd" subtype="-1" type="1"/>
@@ -939,24 +939,25 @@
                             <Property name="text" type="java.lang.String" value="&#x110;&#x1ebf;n ng&#xe0;y"/>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JFormattedTextField" name="txtEndDateReceipt1">
+                        <Component class="javax.swing.JFormattedTextField" name="txtEndDateProduct">
                           <Properties>
                             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                               <Format format="yyyy-MM-dd" subtype="-1" type="1"/>
                             </Property>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JComboBox" name="jComboBox1">
+                        <Component class="javax.swing.JComboBox" name="cbbType">
                           <Properties>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                              <StringArray count="2">
-                                <StringItem index="0" value="H&#xe0;ng t&#x1ed3;n kho"/>
-                                <StringItem index="1" value="H&#xe0;ng b&#xe1;n ch&#x1ea1;y"/>
+                              <StringArray count="3">
+                                <StringItem index="0" value="H&#xe0;ng b&#xe1;n ch&#x1ea1;y"/>
+                                <StringItem index="1" value="H&#xe0;ng t&#x1ed3;n kho"/>
+                                <StringItem index="2" value=" "/>
                               </StringArray>
                             </Property>
                           </Properties>
                           <Events>
-                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox1ActionPerformed"/>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbbTypeActionPerformed"/>
                           </Events>
                           <AuxValues>
                             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -983,8 +984,8 @@
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="txtQttyBillReceipt1" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="txtDCashReceipt1" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtQttyProduct" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtDCashProduct" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -994,7 +995,7 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="txtQttyBillReceipt1" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                                      <Component id="txtQttyProduct" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                                       <Component id="jLabel37" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -1003,7 +1004,7 @@
                                           <Component id="jLabel38" min="-2" pref="31" max="-2" attributes="0"/>
                                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                       </Group>
-                                      <Component id="txtDCashReceipt1" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtDCashProduct" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                               </Group>
@@ -1019,7 +1020,7 @@
                             <Property name="text" type="java.lang.String" value="S&#x1ed1; l&#x1b0;&#x1ee3;ng"/>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JTextField" name="txtQttyBillReceipt1">
+                        <Component class="javax.swing.JTextField" name="txtQttyProduct">
                           <Properties>
                             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                               <Font name="Cambria" size="14" style="0"/>
@@ -1027,7 +1028,7 @@
                             <Property name="horizontalAlignment" type="int" value="4"/>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JTextField" name="txtDCashReceipt1">
+                        <Component class="javax.swing.JTextField" name="txtDCashProduct">
                           <Properties>
                             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                               <Font name="Cambria" size="27" style="1"/>
@@ -1065,7 +1066,7 @@
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton7ActionPerformed"/>
                       </Events>
                     </Component>
-                    <Component class="javax.swing.JButton" name="jButton8">
+                    <Component class="javax.swing.JButton" name="btnFillProduct">
                       <Properties>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Cambria" size="14" style="1"/>
@@ -1076,7 +1077,7 @@
                         <Property name="text" type="java.lang.String" value="L&#x1ecd;c"/>
                       </Properties>
                       <Events>
-                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton8ActionPerformed"/>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFillProductActionPerformed"/>
                       </Events>
                     </Component>
                     <Component class="javax.swing.JButton" name="jButton9">
@@ -1102,7 +1103,7 @@
 
                   <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                   <SubComponents>
-                    <Component class="javax.swing.JTable" name="tblReceipt1">
+                    <Component class="javax.swing.JTable" name="tblProduct">
                       <Properties>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Cambria" size="13" style="0"/>
@@ -1117,7 +1118,7 @@
                         </Property>
                       </Properties>
                       <Events>
-                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblReceipt1MouseClicked"/>
+                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblProductMouseClicked"/>
                       </Events>
                       <AuxValues>
                         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
