--- a/src/main/java/vn/edu/nuce/daotao/StoreManager/view/jpanel/DoashBoardJpanel.form
+++ b/src/main/java/vn/edu/nuce/daotao/StoreManager/view/jpanel/DoashBoardJpanel.form
@@ -98,7 +98,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/images/home.png"/>
         </Property>
-        <Property name="text" type="java.lang.String" value=" DashBoard"/>
+        <Property name="text" type="java.lang.String" value=" T&#x1ed5;ng quan c&#x1eed;a h&#xe0;ng theo th&#xe1;ng"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel6">
